--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
 			<img src="bike.png" class="rotating" />
 			<div class="clearall"></div>
 		</div>
-		<p>On Tuesday April 22, 1884 <a href="http://www.strudel.org.uk/blog/stevens/">Thomas Stevens</a> set off from San Francisco and cycled around the world on a Penny Farthing. On Tuesday April 22, 2014 I started to <a href="https://github.com/slowe/RTWbike/blob/master/lowe2014.geojson">recreate</a> his journey* across the US <a href="http://justgiving.com/RTWbike/">raising money for MSF</a> (Doctors Without Borders). I updated my progress via <a href="https://twitter.com/RTWbike">tweets</a>, <a href="blog/">blog</a>, <a href="https://www.flickr.com/photos/astronomyblog/">photos</a> and <a href="https://gist.github.com/arfon/11101663">an updating map</a> (thanks Arfon!). You can now see my <a href="elevation.html">elevation profile</a>.</p>
-		<h2>April 22 to July 31, 2014</h2>
+		<p>On Tuesday April 22, 1884 <a href="http://www.strudel.org.uk/blog/stevens/">Thomas Stevens</a> set off from San Francisco and cycled around the world on a Penny Farthing. On Tuesday April 22, 2014 I started to <a href="https://github.com/slowe/RTWbike/blob/master/lowe2014.geojson">recreate</a> his journey* across the US <a href="http://justgiving.com/RTWbike/">raising money for MSF</a> (Doctors Without Borders). I updated my progress via <a href="https://twitter.com/RTWbike">tweets</a>, <a href="blog/">blog</a>, <a href="https://www.flickr.com/photos/astronomyblog/">photos</a> and <a href="https://gist.github.com/arfon/11101663">an updating map</a> (thanks Arfon!). You can now see my <a href="elevation.html">US elevation profile</a>. In 2015 I recreated the leg from Liverpool to Istanbul.</p>
+		<h2>May 2 to June 29, 2015</h2>
 
-<script src="https://gist.github.com/arfon/11101663.js"></script>
+<!-- script src="https://gist.github.com/arfon/11101663.js -->
+<script src="https://gist.github.com/arfon/e6c5f68dbad9102be948.js"></script>
 
 
 	</div>
